Fix T69221: inconsistent handling of filenames derived from image names.

We did not properly sanitize image data block name when using it to init
file name...